refactor: 로직 정리